--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "aos": "^2.3.4",
     "firebase": "^11.9.1",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.3",
